width problem fixed with x-overflow on video

--- a/src/app/components/pages/front/front.component.css
+++ b/src/app/components/pages/front/front.component.css
@@ -11,7 +11,7 @@
 .wraper{
 
 
-    width: 100vw;
+    width: 100%;
     background-color: #f1a900;
     height: 100%;
 }
