--- a/src/app/components/parts/seats/seats.component.css
+++ b/src/app/components/parts/seats/seats.component.css
@@ -6,7 +6,7 @@
 
     
     
-    width: 100vw;
+    width: 100%;
     background-color: #111;
     padding-top: 5rem;
     padding-bottom: 5rem;
