--- a/src/app/components/parts/topnav/topnav.component.css
+++ b/src/app/components/parts/topnav/topnav.component.css
@@ -2,7 +2,7 @@ nav{
     position: absolute;
     top: 0;
     background-color: #000;
-    width: 100vw;
+    width: 100%;
     height: 4rem;
     z-index: 1;
     
