--- a/src/styles.css
+++ b/src/styles.css
@@ -38,7 +38,7 @@ footer, header, hgroup, menu, nav, section {
 body {
 	line-height: 1;
 	background-color: #f1a900;
-	overflow-x: hidden; 
+	/*overflow-x: hidden;*/ 
 	
 }
 ol, ul {
